--- a/infrastructure/cluster.yml
+++ b/infrastructure/cluster.yml
@@ -300,59 +300,59 @@ Outputs:
     Description: The name of the ECS cluster
     Value: !Ref 'ECSCluster'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ClusterName' ] ]
+      Name: !Sub '${EnvironmentName}:ClusterName'
   ExternalUrl:
     Description: The url of the external load balancer
-    Value: !Join ['', ['http://', !GetAtt 'PublicLoadBalancer.DNSName']]
+    Value: !Sub 'http://${PublicLoadBalancer.DNSName}'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ExternalUrl' ] ]
+      Name: !Sub '${EnvironmentName}:ExternalUrl'
   ExternalDnsName:
     Description: The DNS name
     Value: !GetAtt 'PublicLoadBalancer.DNSName'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ExternalDnsName' ] ]
+      Name: !Sub '${EnvironmentName}:ExternalDnsName'
   ECSRole:
     Description: The ARN of the ECS role
     Value: !GetAtt 'ECSRole.Arn'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ECSRole' ] ]
+      Name: !Sub '${EnvironmentName}:ECSRole'
   ECSTaskExecutionRole:
     Description: The ARN of the ECS role
     Value: !GetAtt 'ECSTaskExecutionRole.Arn'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ECSTaskExecutionRole' ] ]
+      Name: !Sub '${EnvironmentName}:ECSTaskExecutionRole'
   AutoscalingRole:
     Description: The ARN of the ECS role
     Value: !GetAtt 'ECSTaskExecutionRole.Arn'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'AutoscalingRole' ] ]
+      Name: !Sub '${EnvironmentName}:AutoscalingRole'
   HTTPListener:
     Description: The ARN of the public load balancer's HTTP Listener
     Value: !Ref PublicLoadBalancerListenerHTTP
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicListenerHTTP' ] ]
+      Name: !Sub '${EnvironmentName}:PublicListenerHTTP'
   # HTTPSListener:
   #   Description: The ARN of the public load balancer's HTTPS Listener
   #   Value: !Ref PublicLoadBalancerListenerHTTPS
   #   Export:
-  #     Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicListenerHTTPS' ] ]
+  #     Name: !Sub '${EnvironmentName}:PublicListenerHTTPS'
   VPCId:
     Description: The ID of the VPC that this stack is deployed in
     Value: !Ref 'VPC'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'VPCId' ] ]
+      Name: !Sub '${EnvironmentName}:VPCId'
   PublicSubnetOne:
     Description: Public subnet one
     Value: !Ref 'PublicSubnetOne'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicSubnetOne' ] ]
+      Name: !Sub '${EnvironmentName}:PublicSubnetOne'
   PublicSubnetTwo:
     Description: Public subnet two
     Value: !Ref 'PublicSubnetTwo'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicSubnetTwo' ] ]
+      Name: !Sub '${EnvironmentName}:PublicSubnetTwo'
   FargateContainerSecurityGroup:
     Description: A security group used to allow Fargate containers to receive traffic
     Value: !Ref 'FargateContainerSecurityGroup'
     Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'FargateContainerSecurityGroup' ] ]
+      Name: !Sub '${EnvironmentName}:FargateContainerSecurityGroup'
