--- a/services/socket/Dockerfile
+++ b/services/socket/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:18 AS build
+FROM public.ecr.aws/docker/library/node:18 AS build
 WORKDIR /srv
 ADD package.json .
 RUN npm install
 
-FROM node:18-slim
+FROM public.ecr.aws/docker/library/node:18-slim
 COPY --from=build /srv .
 ADD . .
 EXPOSE 3000
