--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1"
+  },
+  "dependencies": {
+    "yarn": "^1.22.19"
   }
 }
