applied permissions for OS

--- a/infrastructure/cluster.yml
+++ b/infrastructure/cluster.yml
@@ -71,6 +71,7 @@ Resources:
     Type: AWS::EC2::InternetGateway
   GatewayAttachement:
     Type: AWS::EC2::VPCGatewayAttachment
+    DependsOn: InternetGateway
     Properties:
       VpcId: !Ref 'VPC'
       InternetGatewayId: !Ref 'InternetGateway'
