--- a/infrastructure/message-indexer.yml
+++ b/infrastructure/message-indexer.yml
@@ -38,6 +38,13 @@ Resources:
         SubnetIds:
           - Fn::ImportValue: !Sub "${EnvironmentName}:PublicSubnetOne"
           - Fn::ImportValue: !Sub "${EnvironmentName}:PublicSubnetTwo"
+      Policies:
+        Statement:
+          -  Effect: "Allow"
+             Action:
+               - "aoss:*"
+             Resource:
+               - "*"
       Events:
         MyDynamoDBtable:
           Type: DynamoDB
